src/test/deca/syntax/invalid/print_variable.synt
print_variable.deca:11: